@@ -16,6 +16,7 @@ Version 4.1.0a
 * htags: locate dbpath like global(1) does.
 * gtags: the -i option also locate tag files among cadedite directories.
 * global, gtags: make icase_path allways enable in Windows32 environment.
+* global: the -T(--through) option added.
 
 Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi
 
